Feature/Config aws

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,9 +20,9 @@ spring.application.name=challenge
 
 
 # Database Configuration
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.url=jdbc:mysql://database-1.chwkemuc6vzv.us-east-2.rds.amazonaws.com:3306/clientdb
+spring.datasource.username=admin
+spring.datasource.password=pinappclave
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate Configuration
@@ -34,4 +34,4 @@ springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 
 # Logging level
-logging.level.root=${SPRING_LOGGING.LEVEL}
+logging.level.root=INFO
