--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,8 @@ services:
       - "8080:8080"
     environment:
       SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/clientdb
-      SPRING_DATASOURCE_USERNAME: root
-      SPRING_DATASOURCE_PASSWORD: admin
+      SPRING_DATASOURCE_USERNAME: admin
+      SPRING_DATASOURCE_PASSWORD: pinappclave
       SPRING_LOGGING.LEVEL: INFO
       
     depends_on:
@@ -20,7 +20,7 @@ services:
     image: mysql:8
     container_name: mysql
     ports:
-      - "3308:3306"
+      - "3306:3306"
     environment:
-      MYSQL_ROOT_PASSWORD: admin
+      MYSQL_ROOT_PASSWORD: pinappclave
       MYSQL_DATABASE: clientdb
